[gd_scene load_steps=14 format=3 uid="uid://cweatkl00j6d7"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_kw313"]
[ext_resource type="PackedScene" uid="uid://dxk7ycrxagvyy" path="res://models/player.glb" id="2_angv0"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_b1ldx"]
[ext_resource type="Script" path="res://scripts/player/CameraDock.gd" id="3_wnu8i"]
[ext_resource type="Script" path="res://scripts/player/activity/Grounded.gd" id="4_kmn10"]
[ext_resource type="Script" path="res://scripts/player/activity/InAir.gd" id="5_4s6kx"]
[ext_resource type="Script" path="res://scripts/player/Frozen.gd" id="6_uimil"]
[ext_resource type="Script" path="res://scripts/player/combat/Active.gd" id="7_07ba3"]
[ext_resource type="Script" path="res://scripts/player/combat/Inactive.gd" id="8_tdh4r"]
[ext_resource type="Script" path="res://scripts/player/MenuStateMachine.gd" id="8_ven3w"]
[ext_resource type="Script" path="res://scripts/player/menu/Active.gd" id="9_lobut"]
[ext_resource type="Script" path="res://scripts/player/menu/Inactive.gd" id="10_gxxm1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_14sy2"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_kw313")

[node name="model" parent="." instance=ExtResource("2_angv0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.403495, 0)
shape = SubResource("SphereShape3D_14sy2")

[node name="GimbalY" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
script = ExtResource("3_wnu8i")

[node name="GimbalX" type="Marker3D" parent="GimbalY"]

[node name="Camera3D" type="Camera3D" parent="GimbalY/GimbalX"]
transform = Transform3D(1, 0, 0, 0, 0.985703, 0.168489, 0, -0.168489, 0.985703, 0, 3, 4)

[node name="CameraMarker" type="Marker3D" parent="GimbalY/GimbalX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 4)

[node name="ActivityStateMachine" type="Node" parent="."]
script = ExtResource("3_b1ldx")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="ActivityStateMachine"]
script = ExtResource("4_kmn10")

[node name="InAir" type="Node" parent="ActivityStateMachine"]
script = ExtResource("5_4s6kx")

[node name="Frozen" type="Node" parent="ActivityStateMachine"]
script = ExtResource("6_uimil")

[node name="CombatStateMachine" type="Node" parent="."]
script = ExtResource("3_b1ldx")
initial_state = NodePath("Inactive")

[node name="Active" type="Node" parent="CombatStateMachine"]
script = ExtResource("7_07ba3")

[node name="Inactive" type="Node" parent="CombatStateMachine"]
script = ExtResource("8_tdh4r")

[node name="MenuStateMachine" type="Node" parent="."]
script = ExtResource("8_ven3w")
initial_state = NodePath("Inactive")

[node name="Active" type="Node" parent="MenuStateMachine"]
script = ExtResource("9_lobut")

[node name="Inactive" type="Node" parent="MenuStateMachine"]
script = ExtResource("10_gxxm1")
